--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "music"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["deotime"]
+description = "Musical composition in rust"
+repository = "https://github.com/DeoTimeTheGithubUser/music"
+license = "MIT"
+keywords = ["music"]
 
 [dependencies]
 soloud = "1"
